--- a/simple-chat-on-java/menu/pom.xml
+++ b/simple-chat-on-java/menu/pom.xml
@@ -9,26 +9,19 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.server</groupId>
-    <artifactId>server</artifactId>
-
-    <properties>
-        <maven.compiler.source>14</maven.compiler.source>
-        <maven.compiler.target>14</maven.compiler.target>
-    </properties>
-
+    <artifactId>menu</artifactId>
     <dependencies>
         <dependency>
-            <groupId>org.message</groupId>
-            <artifactId>message</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.example</groupId>
-            <artifactId>menu</artifactId>
+            <groupId>org.dao</groupId>
+            <artifactId>dao</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
+
+    <properties>
+        <maven.compiler.source>9</maven.compiler.source>
+        <maven.compiler.target>9</maven.compiler.target>
+    </properties>
 
 </project>
